# game-of-greed

./: README.md  bots.py  pyproject.toml
game_of_greed/: game.py  game_logic.py
tests/: test_bank_first_for_two_rounds.py  test_bank_one_roll_then_quit.py  test_banker.py  test_calculate_score.py  test_cheat_and_fix.py  test_hot_dice.py  test_living_on_the_edge.py  test_zilch.py
tests/flow/: flo.py  hot_dice.txt
